# llmpowerup

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SUPABASE_SETUP.md  chat.sh
.github/workflows/: release.yml
dashboard/: .env.example  package.json  pnpm-lock.yaml
dashboard/public/: agent-frame.html  agent-worker.js  test-sse.html
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/(auth)/login/: page.tsx
dashboard/src/app/api/chat/: route.ts
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  input.tsx  markdown.tsx  page-header.tsx  stat-card.tsx  toast.tsx
dashboard/src/lib/: api.ts  db.ts  supabase.ts  utils.ts
services/api-proxy/: .env.example  package.json  pnpm-lock.yaml
services/api-proxy/src/: index.ts  test.ts
src-rust/: Cargo.toml
src-rust/crates/acp/: Cargo.toml
src-rust/crates/plugins/: Cargo.toml
src-rust/crates/server/: .env.example  Cargo.toml
src-rust/crates/server/migrations/: 001_initial_schema.sql
src-rust/crates/server/src/: config.rs  error.rs  lib.rs  main.rs
src-rust/crates/server/src/auth/: api_key.rs  middleware.rs  mod.rs
src-rust/crates/server/src/credits/: middleware.rs  mod.rs  pricing.rs
src-rust/crates/server/src/db/: api_keys.rs  credentials.rs  messages.rs  mod.rs  pool.rs  sessions.rs  tenants.rs  usage.rs
src-rust/crates/server/src/rate_limit/: middleware.rs
src-rust/crates/server/src/routes/: agent.rs  health.rs  mod.rs  models.rs  sessions.rs  stripe_webhook.rs  tools.rs  usage.rs
src-rust/crates/server/src/sandbox/: policy.rs
src-rust/crates/server/src/streaming/: mod.rs  openai_format.rs  sse.rs  vercel_format.rs
src-rust/crates/server/src/tenant/: context.rs  mod.rs  provider_factory.rs  tool_context_factory.rs
(+11 files in other folders)
